@@ -1,3 +1,12 @@
+2003-07-02  Shane Hyde  <shane@enactive.org>
+
+	* generator/GenBase.cs : put #line directive after the 
+	#region so line numbers match up.
+
+2003-07-02  Mike Kestner  <mkestner@speakeasy.net>
+
+	* generator/StructBase.cs : remove doc comments
+
 2003-06-25  Martin Willemoes Hansen <mwh@sysrq.dk>
 
 	* parser/gapi_pp.pl: Added striping of C comments
